fixup! Write implemented tests table to README.md

--- a/.github/workflows/implemented-tests-table.yml
+++ b/.github/workflows/implemented-tests-table.yml
@@ -26,4 +26,4 @@ jobs:
         run: git diff -- README.md
 
       - name: Verify README.md did not change
-        run: git status --short -- README.md | grep --invert-match '^ M'
+        run: "! git status --short -- README.md | grep '^ M'"
